--- a/Interaction_and_Pathways_Data_Retrival.ipynb
+++ b/Interaction_and_Pathways_Data_Retrival.ipynb
@@ -37,7 +37,11 @@
         "\n",
         "Final Objective:\n",
         "  - Compare the known drug-target interaction site with the structurally similar malaria protein site.\n",
-        "  - If significant structural similarity is observed, infer that the drug may also bind to the malaria protein at the same or similar site → suggesting a potential for drug repurposing."
+        "  - If significant structural similarity is observed, infer that the drug may also bind to the malaria protein at the same or similar site → suggesting a potential for drug repurposing.\n",
+        "\n",
+        "Summary:\n",
+        "\n",
+        "Drug → Known Target → Structure → Similar Malaria Protein → Binding Prediction"
       ],
       "metadata": {
         "id": "5d-k6vfB_FEY"
@@ -970,7 +974,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Do the blast search with each .fasta file sequence and toxonomy = 5833**"
+        "# **Do the blast search with each .fasta file sequence and toxonomy = 5833**\n",
+        "\n",
+        "✅ Step 3: BLAST Against Malaria Proteins\n",
+        "\n",
+        "Now you have the sequences of drug target proteins.\n",
+        "\n",
+        "Goal:\n",
+        "Find if these human targets are similar to any malaria proteins (Taxonomy ID 5833).\n",
+        "\n",
+        "How:\n",
+        "You run BLASTp (protein-protein alignment):\n",
+        "\n",
+        "    For each chain FASTA sequence\n",
+        "\n",
+        "    Against a filtered BLAST database of only malaria proteins\n",
+        "\n",
+        "    Save the results (scores, % identity, alignment, PDB ID of malaria proteins)\n",
+        "\n",
+        "If you find similar malaria proteins → there’s a chance the drug may bind to them.\n",
+        "✅ Step 4: Save Top 3 Matches\n",
+        "\n",
+        "From the BLAST output, for each target chain:\n",
+        "\n",
+        "    Pick the top 3 similar malaria proteins\n",
+        "\n",
+        "    Save their details (ID, score, identity, etc.) in a JSON file\n",
+        "\n",
+        "    If no hit found, mark as \"NAN\""
       ],
       "metadata": {
         "id": "wDwA0YwrOHNW"
@@ -980,6 +1011,7 @@
       "cell_type": "code",
       "source": [
         "def blast_sequence(fasta_file, tax_id=\"5833\"):\n",
+        "\n",
         "    \"\"\"Extract sequence from FASTA and perform remote BLAST.\"\"\"\n",
         "    with open(fasta_file, 'r') as f:\n",
         "        sequence = ''.join([line.strip() for line in f if not line.startswith(\">\")])\n",
@@ -988,6 +1020,8 @@
         "\n",
         "    output_json = os.path.splitext(fasta_file)[0] + \".json\"\n",
         "\n",
+        "\n",
+        "    \"\"\" Run the BlastP on the information above from the .fasta files which is the sequence for each chain\"\"\"\n",
         "    try:\n",
         "        result_handle = NCBIWWW.qblast(\n",
         "            program=\"blastp\",\n",
@@ -1023,7 +1057,8 @@
         "                print(f\"     E-value  : {hsp.expect}\")\n",
         "                print(f\"     Score    : {hsp.score}\\n\")\n",
         "\n",
-        "        # Save results to JSON\n",
+        "\n",
+        "        \"\"\" Save results to JSON -> whatever happens we will save a json file for each of the .fasta files whether we have results or no results \"\"\"\n",
         "        with open(output_json, \"w\") as f:\n",
         "            json.dump(results, f, indent=4)\n",
         "        print(f\"[✓] Results saved to: {output_json}\")\n",
@@ -1043,24 +1078,146 @@
     {
       "cell_type": "code",
       "source": [
-        "# === Example usage ===\n",
-        "fasta_file = \"/content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/4735/1RKW_A.fasta\"\n",
-        "blast_sequence(fasta_file, \"5833\")"
+        "\"\"\"Usage\"\"\"\n",
+        "\n",
+        "parent_folder = '/content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results'\n",
+        "\n",
+        "for folder in os.listdir(parent_folder):  # Loop over folders\n",
+        "    folder_path = os.path.join(parent_folder, folder)\n",
+        "\n",
+        "    if os.path.isdir(folder_path):  # Make sure it's a folder\n",
+        "        for file in os.listdir(folder_path):  # Loop over files inside the folder\n",
+        "            file_path = os.path.join(folder_path, file)\n",
+        "\n",
+        "            if file.endswith('.fasta'):  # Only FASTA files\n",
+        "                blast_sequence(file_path)\n"
       ],
       "metadata": {
-        "id": "4bmAzuJMlq3W"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "33xGsUaOlq0R",
+        "outputId": "d3608118-a3d6-4b9e-9771-aa3d52b7b8c5"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I24_A.fasta\n",
+            "[✓] BLAST Results for /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I24_A.fasta:\n",
+            "  → Subject ID: 5DYK_A\n",
+            "     Title    : pdb|5DYK|A Chain A, CGMP-dependent protein kinase [Plasmodium falciparum] >pdb|8EM8|A Chain A, cGMP-dependent protein kinase [Plasmodium falciparum 3D7]\n",
+            "     Identity : 57/208\n",
+            "     E-value  : 1.41568e-13\n",
+            "     Score    : 159.0\n",
+            "\n",
+            "  → Subject ID: 1V0O_A\n",
+            "     Title    : pdb|1V0O|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0O|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum]\n",
+            "     Identity : 52/216\n",
+            "     E-value  : 2.05447e-10\n",
+            "     Score    : 131.0\n",
+            "\n",
+            "  → Subject ID: 1OB3_A\n",
+            "     Title    : pdb|1OB3|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1OB3|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0P|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0P|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum]\n",
+            "     Identity : 52/216\n",
+            "     E-value  : 2.11227e-10\n",
+            "     Score    : 131.0\n",
+            "\n",
+            "[✓] Results saved to: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I24_A.json\n",
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I24_B.fasta\n",
+            "[✓] BLAST Results for /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I24_B.fasta:\n",
+            "  → Subject ID: 5DYK_A\n",
+            "     Title    : pdb|5DYK|A Chain A, CGMP-dependent protein kinase [Plasmodium falciparum] >pdb|8EM8|A Chain A, cGMP-dependent protein kinase [Plasmodium falciparum 3D7]\n",
+            "     Identity : 60/210\n",
+            "     E-value  : 7.23364e-13\n",
+            "     Score    : 154.0\n",
+            "\n",
+            "  → Subject ID: 1V0O_A\n",
+            "     Title    : pdb|1V0O|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0O|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum]\n",
+            "     Identity : 49/216\n",
+            "     E-value  : 1.19209e-11\n",
+            "     Score    : 141.0\n",
+            "\n",
+            "  → Subject ID: 1V0B_A\n",
+            "     Title    : pdb|1V0B|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0B|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum]\n",
+            "     Identity : 49/216\n",
+            "     E-value  : 1.2145e-11\n",
+            "     Score    : 141.0\n",
+            "\n",
+            "[✓] Results saved to: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I24_B.json\n",
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I23_A.fasta\n",
+            "[✓] BLAST Results for /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I23_A.fasta:\n",
+            "  → Subject ID: 1V0O_A\n",
+            "     Title    : pdb|1V0O|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0O|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum]\n",
+            "     Identity : 33/109\n",
+            "     E-value  : 1.08611e-11\n",
+            "     Score    : 141.0\n",
+            "\n",
+            "  → Subject ID: 1V0B_A\n",
+            "     Title    : pdb|1V0B|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0B|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum]\n",
+            "     Identity : 33/109\n",
+            "     E-value  : 1.19209e-11\n",
+            "     Score    : 141.0\n",
+            "\n",
+            "  → Subject ID: 1OB3_A\n",
+            "     Title    : pdb|1OB3|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1OB3|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0P|A Chain A, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum] >pdb|1V0P|B Chain B, CELL DIVISION CONTROL PROTEIN 2 HOMOLOG [Plasmodium falciparum]\n",
+            "     Identity : 32/109\n",
+            "     E-value  : 1.63569e-11\n",
+            "     Score    : 140.0\n",
+            "\n",
+            "[✓] Results saved to: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/11511120/4I23_A.json\n",
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_A.fasta\n",
+            "[INFO] No result found.\n",
+            "[✓] Results saved to: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_A.json\n",
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_B.fasta\n",
+            "[INFO] No result found.\n",
+            "[✓] Results saved to: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_B.json\n",
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_C.fasta\n",
+            "[INFO] No result found.\n",
+            "[✓] Results saved to: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_C.json\n",
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_D.fasta\n",
+            "[INFO] No result found.\n",
+            "[✓] Results saved to: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/4FGL_D.json\n",
+            "[INFO] Running BLAST for: /content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/444810/7DI7_A.fasta\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "✅ Step 5: Download Matched Malaria Protein Structures\n",
+        "\n",
+        "For each of the top malaria proteins found in Step 4:\n",
+        "\n",
+        "    If they have a PDB structure → Download it.\n",
+        "\n",
+        "    If not → Download the AlphaFold predicted structure.\n",
+        "\n",
+        "Why? You will use this structure later to:\n",
+        "\n",
+        "    Analyze binding\n",
+        "\n",
+        "    Run docking\n",
+        "\n",
+        "    See if the drug can bind to this malaria protein\n",
+        "\n",
+        "🚀 Why are we doing this?\n",
+        "\n",
+        "The whole logic is:\n",
+        "\n",
+        "    Known drug binds to known human target.\n",
+        "\n",
+        "    If that target looks like a malaria protein → the drug may also bind to the malaria protein.\n",
+        "\n",
+        "    By checking structural similarity, you reduce the search space of possible binding sites.\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "33xGsUaOlq0R"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "9ITZ4HwGsMr6"
+      }
     },
     {
       "cell_type": "code",
@@ -1322,7 +1479,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXKg9cOsQ5qs95zMEkTHTO",
+      "authorship_tag": "ABX9TyPRQS+c2WYvZNo2rCCREbAJ",
       "include_colab_link": true
     },
     "kernelspec": {
